@@ -521,9 +521,6 @@
 
 1008 2016- 2-25 FEAT ViewEntries: add operation template in the columns list
 
-1009 2016- 2-25 FEAT ClosingLedger: review Close button margins
-                     (cf. trash/bug1009)
-
 1010 2016- 2-25 FEAT Ope: formula interpretation should be recursive
 
 1012 2016- 2-25 FEAT GuidedInput: when a row is moved up or down, then
@@ -852,6 +849,10 @@
  997 2016- 2-23 BUG when trying to open a second non modal page never
                     opened before
      2016- 2-24 fixed
+
+1009 2016- 2-25 FEAT ClosingLedger: review Close button margins
+                     (cf. trash/bug1009)
+     2016- 3- 3 fixed
 
 1011 2016- 2-25 BUG  GuidedInput: do not install the account index button
                      when account is locked
