@@ -6,6 +6,7 @@
     <file>ofa-entry-page.ui</file>
     <file>ofa-guided-input.ui</file>
     <file>ofa-guided-input-bin.ui</file>
+    <file>ofa-ledger-close.ui</file>
     <file>ofa-ope-template-help.ui</file>
     <file>ofa-ope-template-properties.ui</file>
     <file>ofa-reconcil-page.ui</file>
